--- a/carpoolApp_v1.0/Base.lproj/Main.storyboard
+++ b/carpoolApp_v1.0/Base.lproj/Main.storyboard
@@ -601,11 +601,19 @@ deserves a caddie.</string>
                         <barButtonItem key="leftBarButtonItem" image="MenuIcon" id="tFz-49-qhw">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="GolferIcon" id="QQE-BP-DH8">
+                            <color key="tintColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="golferActionButtonPressed:" destination="zKG-Ol-Fil" id="4gW-Vt-klK"/>
+                                <segue destination="XgF-ae-0UJ" kind="presentation" id="pqo-9K-F4X"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="400" height="600"/>
                     <connections>
                         <outlet property="findCaddyButton" destination="S6d-dO-dyG" id="a8Z-AL-MdS"/>
+                        <outlet property="golferBarButtonItem" destination="QQE-BP-DH8" id="gce-wx-Kgy"/>
                         <outlet property="menuButton" destination="tFz-49-qhw" id="bd6-2j-cRT"/>
                     </connections>
                 </viewController>
@@ -10161,6 +10169,9 @@ deserves a caddie.</string>
                                 <action selector="exitViewButtonPressed:" destination="zrs-fh-NNV" id="3RT-KB-TGz"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="GolferIcon" id="7ML-Kl-C4s">
+                            <color key="tintColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="alertsContainer" destination="NR8-kM-DDg" id="08U-dV-yPm"/>
@@ -12509,6 +12520,112 @@ deserves a caddie.</string>
             </objects>
             <point key="canvasLocation" x="-871.5" y="792"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DsQ-Ga-Mk2">
+            <objects>
+                <navigationController id="XgF-ae-0UJ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r0Q-az-PM4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="g0T-zN-utW" kind="relationship" relationship="rootViewController" id="D3P-1M-X1H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Sx-bA-5xi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3789" y="-314"/>
+        </scene>
+        <!--Current Reservation-->
+        <scene sceneID="8da-V9-xsE">
+            <objects>
+                <viewController id="g0T-zN-utW" customClass="GolferRoundInProgressViewController" customModule="carpoolApp_v1_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EuH-Dk-hfb"/>
+                        <viewControllerLayoutGuide type="bottom" id="K2Z-bl-hVy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hyh-Lb-fEk">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghW-JJ-fnA">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="Lo4-5A-Rtn">
+                                        <variation key="widthClass=compact" constant="240"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="30" id="rqg-1q-5vm">
+                                        <variation key="widthClass=compact" constant="40"/>
+                                    </constraint>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Reservation Completed">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Lo4-5A-Rtn"/>
+                                        <exclude reference="rqg-1q-5vm"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="Lo4-5A-Rtn"/>
+                                        <include reference="rqg-1q-5vm"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="nextButtonPressed:" destination="7vV-75-0qt" eventType="touchUpInside" id="tlz-Tc-4qL"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="K2Z-bl-hVy" firstAttribute="top" secondItem="ghW-JJ-fnA" secondAttribute="bottom" constant="8" id="0k8-XP-Hfj">
+                                <variation key="widthClass=compact" constant="40"/>
+                            </constraint>
+                            <constraint firstItem="ghW-JJ-fnA" firstAttribute="leading" secondItem="hyh-Lb-fEk" secondAttribute="leadingMargin" constant="60" id="JOr-aa-uaG">
+                                <variation key="widthClass=compact" constant="30"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="ghW-JJ-fnA" secondAttribute="trailing" constant="30" id="W0l-fK-aMZ"/>
+                            <constraint firstItem="ghW-JJ-fnA" firstAttribute="centerX" secondItem="hyh-Lb-fEk" secondAttribute="centerX" id="wXN-vW-hO4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="ghW-JJ-fnA"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="JOr-aa-uaG"/>
+                                <exclude reference="W0l-fK-aMZ"/>
+                                <exclude reference="wXN-vW-hO4"/>
+                                <exclude reference="0k8-XP-Hfj"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="ghW-JJ-fnA"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="JOr-aa-uaG"/>
+                                <include reference="W0l-fK-aMZ"/>
+                                <include reference="wXN-vW-hO4"/>
+                                <include reference="0k8-XP-Hfj"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Current Reservation" id="u62-UB-1O2">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Ipc-51-XUK">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="closeViewButtonPressed:" destination="g0T-zN-utW" id="D9s-Ng-RmF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iNA-kX-nVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4492.5" y="-314"/>
+        </scene>
         <!--Reservation Choose Course View Controller-->
         <scene sceneID="A99-mp-qjW">
             <objects>
@@ -12689,7 +12806,7 @@ deserves a caddie.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qBU-Pg-2k3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3790.5" y="337"/>
+            <point key="canvasLocation" x="3789" y="363"/>
         </scene>
         <!--Container Reservation Choose Course View Controller-->
         <scene sceneID="TGc-hX-ULn">
@@ -12918,7 +13035,7 @@ deserves a caddie.</string>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hqm-Vd-bA5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5329.5" y="336"/>
+            <point key="canvasLocation" x="5329.5" y="363"/>
         </scene>
         <!--Caddies Available View Controller-->
         <scene sceneID="Cdt-Lp-Gam">
@@ -14199,6 +14316,7 @@ deserves a caddie.</string>
         <image name="CaddyRatingImageTest" width="75" height="15"/>
         <image name="DefaultUserProfileImage" width="100" height="100"/>
         <image name="DisclosureIndicatorRevealDown" width="35" height="25"/>
+        <image name="GolferIcon" width="29" height="29"/>
         <image name="LoopLogoLarge" width="135" height="135"/>
         <image name="MenuIcon" width="29" height="29"/>
         <image name="SettingsIcon" width="29" height="29"/>
