--- a/carpoolApp_v1.0/Base.lproj/Main.storyboard
+++ b/carpoolApp_v1.0/Base.lproj/Main.storyboard
@@ -26,10 +26,10 @@
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="539" id="Eve-rU-6Ej">
-                                                <variation key="widthClass=compact" constant="135"/>
+                                                <variation key="widthClass=compact" constant="100"/>
                                             </constraint>
                                             <constraint firstAttribute="width" constant="537" id="iZu-Pd-EWG">
-                                                <variation key="widthClass=compact" constant="135"/>
+                                                <variation key="widthClass=compact" constant="100"/>
                                             </constraint>
                                         </constraints>
                                         <variation key="default">
@@ -106,6 +106,12 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWs-Cf-4GX">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OCq-nf-md3">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <subviews>
@@ -228,6 +234,34 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2H-0l-2mR">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="CZ3-rS-sPE">
+                                        <variation key="widthClass=compact" constant="40"/>
+                                    </constraint>
+                                    <constraint firstAttribute="width" constant="150" id="fd3-FC-nIx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="fd3-FC-nIx"/>
+                                        <exclude reference="CZ3-rS-sPE"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="fd3-FC-nIx"/>
+                                        <include reference="CZ3-rS-sPE"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="cancelButtonPressed:" destination="aQu-IN-tPn" eventType="touchUpInside" id="0he-w3-sU9"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AMS-uK-bR7">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -264,7 +298,7 @@
                                         <variation key="widthClass=compact" constant="100"/>
                                     </constraint>
                                     <constraint firstAttribute="height" constant="30" id="eli-tE-rup">
-                                        <variation key="widthClass=compact" constant="20"/>
+                                        <variation key="widthClass=compact" constant="40"/>
                                     </constraint>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
@@ -287,15 +321,15 @@
                                     <segue destination="8z1-BM-sqF" kind="presentation" id="W7r-s1-CqR"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not already part of the Loop community?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aD5-Qs-GR7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOT ALREADY A PART OF THE LOOP COMMUNITY?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aD5-Qs-GR7">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uyL-us-fDc">
                                         <variation key="widthClass=compact" constant="20"/>
                                     </constraint>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -316,12 +350,22 @@
                                 <variation key="widthClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstItem="PvS-J5-06K" firstAttribute="top" secondItem="aD5-Qs-GR7" secondAttribute="bottom" constant="8" id="499-lh-M5x">
-                                <variation key="widthClass=compact" constant="5"/>
+                                <variation key="widthClass=compact" constant="10"/>
                             </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="OCq-nf-md3" secondAttribute="trailing" constant="70" id="91d-yu-sHc">
                                 <variation key="widthClass=compact" constant="20"/>
                             </constraint>
+                            <constraint firstItem="LWs-Cf-4GX" firstAttribute="top" secondItem="fsC-Wq-DpN" secondAttribute="bottom" constant="-17" id="CQi-ad-yuS">
+                                <variation key="widthClass=compact" constant="0.0"/>
+                            </constraint>
                             <constraint firstItem="aD5-Qs-GR7" firstAttribute="centerX" secondItem="gin-OB-9eW" secondAttribute="centerX" id="Do4-8y-NaW"/>
+                            <constraint firstItem="OCq-nf-md3" firstAttribute="top" secondItem="LWs-Cf-4GX" secondAttribute="bottom" constant="33" id="FQ7-gA-XAP">
+                                <variation key="widthClass=compact" constant="0.0"/>
+                            </constraint>
+                            <constraint firstItem="LWs-Cf-4GX" firstAttribute="leading" secondItem="OCq-nf-md3" secondAttribute="leading" id="Ino-X6-Esc">
+                                <variation key="widthClass=compact" constant="10"/>
+                            </constraint>
+                            <constraint firstItem="r2H-0l-2mR" firstAttribute="top" secondItem="OCq-nf-md3" secondAttribute="bottom" constant="20" id="Ome-km-xbX"/>
                             <constraint firstItem="OCq-nf-md3" firstAttribute="leading" secondItem="gin-OB-9eW" secondAttribute="leadingMargin" constant="50" id="PR2-oX-OJs">
                                 <variation key="widthClass=compact" constant="20"/>
                             </constraint>
@@ -330,13 +374,16 @@
                             </constraint>
                             <constraint firstItem="PvS-J5-06K" firstAttribute="centerX" secondItem="gin-OB-9eW" secondAttribute="centerX" id="UJL-ES-gKM"/>
                             <constraint firstItem="AMS-uK-bR7" firstAttribute="top" secondItem="OCq-nf-md3" secondAttribute="bottom" constant="20" id="YXM-2W-aRU"/>
-                            <constraint firstItem="OCq-nf-md3" firstAttribute="centerY" secondItem="gin-OB-9eW" secondAttribute="centerY" id="fmw-yT-7ZQ"/>
+                            <constraint firstItem="OCq-nf-md3" firstAttribute="centerY" secondItem="gin-OB-9eW" secondAttribute="centerY" id="fmw-yT-7ZQ">
+                                <variation key="widthClass=compact" constant="-10"/>
+                            </constraint>
                             <constraint firstItem="OCq-nf-md3" firstAttribute="top" secondItem="fsC-Wq-DpN" secondAttribute="bottom" constant="44" id="oF0-6b-A3z">
                                 <variation key="widthClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="fsC-Wq-DpN" secondAttribute="trailing" constant="112" id="s3D-E5-rks">
                                 <variation key="widthClass=compact" constant="0.0"/>
                             </constraint>
+                            <constraint firstItem="r2H-0l-2mR" firstAttribute="centerX" secondItem="gin-OB-9eW" secondAttribute="centerX" id="sOk-1v-1Bb"/>
                             <constraint firstItem="SDx-BQ-XKg" firstAttribute="top" secondItem="PvS-J5-06K" secondAttribute="bottom" constant="10" id="wSo-wu-J5C">
                                 <variation key="widthClass=compact" constant="40"/>
                             </constraint>
@@ -344,58 +391,75 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="fsC-Wq-DpN"/>
+                                <exclude reference="LWs-Cf-4GX"/>
                                 <exclude reference="OCq-nf-md3"/>
+                                <exclude reference="r2H-0l-2mR"/>
                                 <exclude reference="AMS-uK-bR7"/>
                                 <exclude reference="PvS-J5-06K"/>
                                 <exclude reference="aD5-Qs-GR7"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="wSo-wu-J5C"/>
-                                <exclude reference="2Tp-BQ-ogL"/>
-                                <exclude reference="YXM-2W-aRU"/>
-                                <exclude reference="499-lh-M5x"/>
-                                <exclude reference="UJL-ES-gKM"/>
-                                <exclude reference="Do4-8y-NaW"/>
-                                <exclude reference="91d-yu-sHc"/>
-                                <exclude reference="PR2-oX-OJs"/>
-                                <exclude reference="fmw-yT-7ZQ"/>
-                                <exclude reference="oF0-6b-A3z"/>
                                 <exclude reference="42H-AI-uCA"/>
                                 <exclude reference="QS8-jb-NpN"/>
                                 <exclude reference="s3D-E5-rks"/>
+                                <exclude reference="CQi-ad-yuS"/>
+                                <exclude reference="Ino-X6-Esc"/>
+                                <exclude reference="91d-yu-sHc"/>
+                                <exclude reference="FQ7-gA-XAP"/>
+                                <exclude reference="PR2-oX-OJs"/>
+                                <exclude reference="fmw-yT-7ZQ"/>
+                                <exclude reference="oF0-6b-A3z"/>
+                                <exclude reference="2Tp-BQ-ogL"/>
+                                <exclude reference="YXM-2W-aRU"/>
+                                <exclude reference="Ome-km-xbX"/>
+                                <exclude reference="sOk-1v-1Bb"/>
+                                <exclude reference="Do4-8y-NaW"/>
+                                <exclude reference="499-lh-M5x"/>
+                                <exclude reference="UJL-ES-gKM"/>
+                                <exclude reference="wSo-wu-J5C"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="fsC-Wq-DpN"/>
+                                <include reference="LWs-Cf-4GX"/>
                                 <include reference="OCq-nf-md3"/>
+                                <include reference="r2H-0l-2mR"/>
                                 <include reference="AMS-uK-bR7"/>
                                 <include reference="PvS-J5-06K"/>
                                 <include reference="aD5-Qs-GR7"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="wSo-wu-J5C"/>
-                                <include reference="2Tp-BQ-ogL"/>
-                                <include reference="YXM-2W-aRU"/>
-                                <include reference="499-lh-M5x"/>
-                                <include reference="UJL-ES-gKM"/>
-                                <include reference="Do4-8y-NaW"/>
-                                <include reference="91d-yu-sHc"/>
-                                <include reference="PR2-oX-OJs"/>
-                                <include reference="fmw-yT-7ZQ"/>
-                                <include reference="oF0-6b-A3z"/>
                                 <include reference="42H-AI-uCA"/>
                                 <include reference="QS8-jb-NpN"/>
                                 <include reference="s3D-E5-rks"/>
+                                <include reference="CQi-ad-yuS"/>
+                                <include reference="Ino-X6-Esc"/>
+                                <include reference="91d-yu-sHc"/>
+                                <include reference="FQ7-gA-XAP"/>
+                                <include reference="PR2-oX-OJs"/>
+                                <include reference="fmw-yT-7ZQ"/>
+                                <exclude reference="oF0-6b-A3z"/>
+                                <include reference="2Tp-BQ-ogL"/>
+                                <include reference="YXM-2W-aRU"/>
+                                <include reference="Ome-km-xbX"/>
+                                <include reference="sOk-1v-1Bb"/>
+                                <include reference="Do4-8y-NaW"/>
+                                <include reference="499-lh-M5x"/>
+                                <include reference="UJL-ES-gKM"/>
+                                <include reference="wSo-wu-J5C"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="OCq-nf-md3" id="D6K-88-cA9"/>
+                        <outlet property="cancelButton" destination="r2H-0l-2mR" id="ro0-PC-jHr"/>
+                        <outlet property="cancelButtonCenterConstraint" destination="sOk-1v-1Bb" id="NeB-eq-0tu"/>
                         <outlet property="emailTextField" destination="H9f-mE-Q28" id="CMq-Iz-jvT"/>
                         <outlet property="loginButton" destination="AMS-uK-bR7" id="WUg-J4-Xwt"/>
                         <outlet property="loginButtonCenterConstraint" destination="2Tp-BQ-ogL" id="d10-gz-UAH"/>
                         <outlet property="passwordTextField" destination="PJT-dV-MMI" id="V8O-1P-tjI"/>
+                        <outlet property="signUpButton" destination="PvS-J5-06K" id="os6-7V-3EF"/>
                         <segue destination="GdG-NM-qdM" kind="presentation" identifier="toForgotPasswordSegue" id="2hv-zd-rjz"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="loginSuccessfulSegue" id="iQl-E5-rpJ"/>
                     </connections>
