--- a/carpoolApp_v1.0/Base.lproj/Main.storyboard
+++ b/carpoolApp_v1.0/Base.lproj/Main.storyboard
@@ -13260,14 +13260,14 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ow1-Qk-gi4">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ow1-Qk-gi4">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" editingAccessoryType="checkmark" id="CBV-go-s74">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" editingAccessoryType="checkmark" id="pZa-xZ-CHN">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CBV-go-s74" id="L5N-O3-bm6">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pZa-xZ-CHN" id="uYY-0r-a5W">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
@@ -13313,7 +13313,7 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                                             <constraint firstAttribute="width" constant="60" id="aPm-Yj-caJ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -13566,7 +13566,7 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="hbZ-BP-bl3">
-                                        <variation key="widthClass=compact" constant="30"/>
+                                        <variation key="widthClass=compact" constant="34"/>
                                     </constraint>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
@@ -13591,7 +13591,7 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="gVr-iL-PuD" firstAttribute="top" secondItem="0ra-Gt-acr" secondAttribute="bottom" constant="10" id="4jp-ax-dFE">
-                                <variation key="widthClass=compact" constant="40"/>
+                                <variation key="widthClass=compact" constant="37"/>
                             </constraint>
                             <constraint firstAttribute="trailingMargin" secondItem="xVf-A5-ilD" secondAttribute="trailing" constant="-20" id="AFc-hv-YbI"/>
                             <constraint firstItem="xVf-A5-ilD" firstAttribute="leading" secondItem="jUJ-E2-Clv" secondAttribute="leadingMargin" constant="-20" id="Fqz-ME-fUz"/>
@@ -13646,6 +13646,7 @@ Golf can be so much more fun and rewarding when you've got a great caddie by you
                     <connections>
                         <outlet property="containerView" destination="xVf-A5-ilD" id="9dR-yJ-ass"/>
                         <outlet property="resultsFilterButton" destination="0ra-Gt-acr" id="iMj-h9-brN"/>
+                        <outlet property="resultsFilterButtonBottomConstraint" destination="4jp-ax-dFE" id="4A5-Pm-AzM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qBU-Pg-2k3" userLabel="First Responder" sceneMemberID="firstResponder"/>
