NSNotifications added for all calendar views.

--- a/carpoolApp_v1.0/Base.lproj/Main.storyboard
+++ b/carpoolApp_v1.0/Base.lproj/Main.storyboard
@@ -16300,7 +16300,9 @@ for the game of golf.</string>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cFf-tL-Dqh">
                                         <rect key="frame" x="-160" y="-108" width="320" height="216"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="hkU-dL-gOh"/>
+                                            <constraint firstAttribute="height" constant="100" id="hkU-dL-gOh">
+                                                <variation key="widthClass=compact" constant="120"/>
+                                            </constraint>
                                             <constraint firstAttribute="width" constant="260" id="lG1-9T-iHh">
                                                 <variation key="widthClass=compact" constant="200"/>
                                             </constraint>
@@ -16332,8 +16334,15 @@ for the game of golf.</string>
                                         <variation key="widthClass=compact" constant="-10"/>
                                     </constraint>
                                     <constraint firstItem="7N4-n8-58T" firstAttribute="centerX" secondItem="hLX-St-YUB" secondAttribute="centerX" id="MNm-FE-Tvq"/>
+                                    <constraint firstItem="cFf-tL-Dqh" firstAttribute="centerY" secondItem="PDT-0m-DRc" secondAttribute="centerY" id="NFS-Pb-vPP"/>
+                                    <constraint firstItem="PDT-0m-DRc" firstAttribute="top" secondItem="hLX-St-YUB" secondAttribute="top" constant="90" id="Owh-8X-D1H">
+                                        <variation key="widthClass=compact" constant="80"/>
+                                    </constraint>
                                     <constraint firstAttribute="trailing" secondItem="PDT-0m-DRc" secondAttribute="trailing" id="R3f-rw-w4I">
                                         <variation key="widthClass=compact" constant="-10"/>
+                                    </constraint>
+                                    <constraint firstItem="qfV-iI-guC" firstAttribute="top" secondItem="PDT-0m-DRc" secondAttribute="bottom" constant="30" id="Rtw-Bg-3Mc">
+                                        <variation key="widthClass=compact" constant="20"/>
                                     </constraint>
                                     <constraint firstItem="l1b-gW-NdR" firstAttribute="top" secondItem="hLX-St-YUB" secondAttribute="top" id="UTO-M0-Qxm"/>
                                     <constraint firstItem="cFf-tL-Dqh" firstAttribute="centerX" secondItem="hLX-St-YUB" secondAttribute="centerX" id="Vdy-7S-rxc"/>
@@ -16344,7 +16353,7 @@ for the game of golf.</string>
                                         <variation key="widthClass=compact" constant="100"/>
                                     </constraint>
                                     <constraint firstItem="PDT-0m-DRc" firstAttribute="bottom" secondItem="cFf-tL-Dqh" secondAttribute="bottom" id="daL-bF-aNr">
-                                        <variation key="widthClass=compact" constant="20"/>
+                                        <variation key="widthClass=compact" constant="10"/>
                                     </constraint>
                                     <constraint firstItem="7N4-n8-58T" firstAttribute="top" secondItem="JBY-KU-Ttw" secondAttribute="bottom" id="jGd-Ut-rFz"/>
                                     <constraint firstItem="JBY-KU-Ttw" firstAttribute="centerX" secondItem="hLX-St-YUB" secondAttribute="centerX" id="jiB-cV-kCS"/>
@@ -16364,7 +16373,7 @@ for the game of golf.</string>
                                         <variation key="widthClass=compact" constant="0.0"/>
                                     </constraint>
                                     <constraint firstItem="PDT-0m-DRc" firstAttribute="top" secondItem="cFf-tL-Dqh" secondAttribute="top" id="zmW-jK-Avl">
-                                        <variation key="widthClass=compact" constant="-20"/>
+                                        <variation key="widthClass=compact" constant="-10"/>
                                     </constraint>
                                 </constraints>
                                 <variation key="default">
@@ -16384,6 +16393,7 @@ for the game of golf.</string>
                                         <exclude reference="1nj-0w-Us6"/>
                                         <exclude reference="HyH-FK-apB"/>
                                         <exclude reference="JaT-MC-lRZ"/>
+                                        <exclude reference="Owh-8X-D1H"/>
                                         <exclude reference="R3f-rw-w4I"/>
                                         <exclude reference="daL-bF-aNr"/>
                                         <exclude reference="tKL-86-C3q"/>
@@ -16391,11 +16401,13 @@ for the game of golf.</string>
                                         <exclude reference="MNm-FE-Tvq"/>
                                         <exclude reference="jGd-Ut-rFz"/>
                                         <exclude reference="xvl-yA-qeH"/>
+                                        <exclude reference="NFS-Pb-vPP"/>
                                         <exclude reference="Vdy-7S-rxc"/>
                                         <exclude reference="coU-fn-1T7"/>
                                         <exclude reference="FbC-t2-02F"/>
                                         <exclude reference="jiB-cV-kCS"/>
                                         <exclude reference="qK7-pP-a1d"/>
+                                        <exclude reference="Rtw-Bg-3Mc"/>
                                         <exclude reference="jwb-8i-YzI"/>
                                         <exclude reference="r3L-p4-IhY"/>
                                         <exclude reference="sIM-Tc-Xry"/>
@@ -16418,18 +16430,21 @@ for the game of golf.</string>
                                         <exclude reference="1nj-0w-Us6"/>
                                         <exclude reference="HyH-FK-apB"/>
                                         <include reference="JaT-MC-lRZ"/>
+                                        <include reference="Owh-8X-D1H"/>
                                         <include reference="R3f-rw-w4I"/>
-                                        <include reference="daL-bF-aNr"/>
+                                        <exclude reference="daL-bF-aNr"/>
                                         <exclude reference="tKL-86-C3q"/>
-                                        <include reference="zmW-jK-Avl"/>
+                                        <exclude reference="zmW-jK-Avl"/>
                                         <include reference="MNm-FE-Tvq"/>
                                         <include reference="jGd-Ut-rFz"/>
                                         <exclude reference="xvl-yA-qeH"/>
+                                        <include reference="NFS-Pb-vPP"/>
                                         <include reference="Vdy-7S-rxc"/>
-                                        <include reference="coU-fn-1T7"/>
+                                        <exclude reference="coU-fn-1T7"/>
                                         <exclude reference="FbC-t2-02F"/>
                                         <include reference="jiB-cV-kCS"/>
                                         <include reference="qK7-pP-a1d"/>
+                                        <include reference="Rtw-Bg-3Mc"/>
                                         <include reference="jwb-8i-YzI"/>
                                         <include reference="r3L-p4-IhY"/>
                                         <include reference="sIM-Tc-Xry"/>
